; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_wma.c_ff_wma_total_gain_to_bits.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_wma.c_ff_wma_total_gain_to_bits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ff_wma_total_gain_to_bits(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp slt i32 %4, 15
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 13, i32* %2, align 4
  br label %20

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = icmp slt i32 %8, 32
  br i1 %9, label %10, label %11

10:                                               ; preds = %7
  store i32 12, i32* %2, align 4
  br label %20

11:                                               ; preds = %7
  %12 = load i32, i32* %3, align 4
  %13 = icmp slt i32 %12, 40
  br i1 %13, label %14, label %15

14:                                               ; preds = %11
  store i32 11, i32* %2, align 4
  br label %20

15:                                               ; preds = %11
  %16 = load i32, i32* %3, align 4
  %17 = icmp slt i32 %16, 45
  br i1 %17, label %18, label %19

18:                                               ; preds = %15
  store i32 10, i32* %2, align 4
  br label %20

19:                                               ; preds = %15
  store i32 9, i32* %2, align 4
  br label %20

20:                                               ; preds = %19, %18, %14, %10, %6
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
